fix: updated the scrollbar in light mode

--- a/packages/ui/app/globals.css
+++ b/packages/ui/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -9,63 +9,71 @@
 
     --card: 0 0% 100%;
     --card-foreground: 224 71.4% 4.1%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 224 71.4% 4.1%;
- 
+
     --primary: 220.9 39.3% 11%;
     --primary-foreground: 210 20% 98%;
- 
+
     --secondary: 220 14.3% 95.9%;
     --secondary-foreground: 220.9 39.3% 11%;
- 
+
     --muted: 220 14.3% 95.9%;
     --muted-foreground: 220 8.9% 46.1%;
- 
+
     --accent: 220 14.3% 95.9%;
     --accent-foreground: 220.9 39.3% 11%;
- 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 20% 98%;
 
     --border: 220 13% 91%;
     --input: 220 13% 91%;
     --ring: 224 71.4% 4.1%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 224 71.4% 4.1%;
     --foreground: 210 20% 98%;
- 
+
     --card: 224 71.4% 4.1%;
     --card-foreground: 210 20% 98%;
- 
+
     --popover: 224 71.4% 4.1%;
     --popover-foreground: 210 20% 98%;
- 
+
     --primary: 210 20% 98%;
     --primary-foreground: 220.9 39.3% 11%;
- 
+
     --secondary: 215 27.9% 16.9%;
     --secondary-foreground: 210 20% 98%;
- 
+
     --muted: 215 27.9% 16.9%;
     --muted-foreground: 217.9 10.6% 64.9%;
- 
+
     --accent: 215 27.9% 16.9%;
     --accent-foreground: 210 20% 98%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 20% 98%;
- 
+
     --border: 215 27.9% 16.9%;
     --input: 215 27.9% 16.9%;
     --ring: 216 12.2% 83.9%;
+
+    ::-webkit-scrollbar-thumb {
+      background-color: rgb(93, 92, 93, 0.8);
+    }
+
+    ::-webkit-scrollbar-track {
+      background-color: rgb(31, 41, 55, 0.8);
+    }
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
@@ -77,35 +85,27 @@
 
 /* Scroll Bar */
 ::-webkit-scrollbar {
+  /* Width for Scroll bar in Vertical direction */
   width: 8px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgb(93, 92, 93, 0.8);
-  border-radius: 4px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: rgb(31, 41, 55, 0.8); 
-}
-
-/* Horizontal Scroll Bar */
-::-webkit-scrollbar:horizontal {
+  /* Height for Scroll bar in Horizontal direction */
   height: 8px;
 }
 
-::-webkit-scrollbar-thumb:horizontal {
-  background-color: rgb(93, 92, 93, 0.8); 
+::-webkit-scrollbar-thumb {
   border-radius: 4px;
 }
 
-::-webkit-scrollbar-track:horizontal {
-  background-color: rgb(31, 41, 55, 0.8); 
+::-webkit-scrollbar-thumb {
+  background-color: #7d7d7d;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(31, 41, 55, 0.8);
 }
 
 /* Optional: Add hover effect */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #5d5c5d;
+  background-color: #928f8f;
   /* Optionally add box-shadow based on your design */
-  box-shadow: 0 0 5px #5d5c5d;
+  box-shadow: 0 0 5px #928f8f;
 }
